--- a/portal/templates/patients_by_org.html
+++ b/portal/templates/patients_by_org.html
@@ -12,7 +12,7 @@
             <div class="modal-content">
               <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="dataDownloadLabel">{{ _("Export assessment data") }}</h4>
+                <h4 class="modal-title" id="dataDownloadLabel">{{ _("Export questionnaire data") }}</h4>
               </div>
               <div class="modal-body">
                   <div class="form-group">
@@ -38,7 +38,7 @@
   <div class="admin-table table-responsive smaller-text">
       <div id="adminTableToolbar" class="admin-toolbar">
         {% if config.PROVIDER_BULK_DATA_ACCESS %}
-          <div class="orglist-download-container"><div><a href="#" id="patientAssessmentDownload" class="create-user-link btn btn-lg btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">{{ _("Export assessment data") }} &nbsp;<span class="glyphicon glyphicon-save"></span></a></div>
+          <div class="orglist-download-container"><div><a href="#" id="patientAssessmentDownload" class="create-user-link btn btn-lg btn-tnth-primary" data-toggle="modal" data-target="#dataDownloadModal">{{ _("Export questionnaire data") }} &nbsp;<span class="glyphicon glyphicon-save"></span></a></div>
          </div>
         {% endif %}
          <div id="orglistSelector" class="dropdown btn-group orglist-selector">
@@ -81,7 +81,7 @@
                   <th data-field="email" data-sortable="true" data-class="email-field">{{ _("Email") }}</th>
                    <th data-field="phone" data-sortable="true" data-visible="false" data-width="10%" data-class="phone-field">{{ _("Cell") }}</th>
                   {% if 'reports' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}<th data-field="provider_html" data-sortable="true" data-class="reports-field">{{ _("Reports") }}</th>{% endif %}
-                  {% if 'status' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}<th data-field="status" data-sortable="false" data-card-visible="false" data-searchable="false" data-class="status-field">{{ _("Assessment Status") }}</th>{% endif %}
+                  {% if 'status' in config.PATIENTS_BY_PROVIDER_ADDL_FIELDS %}<th data-field="status" data-sortable="false" data-card-visible="false" data-searchable="false" data-class="status-field">{{ _("Questionnaire Status") }}</th>{% endif %}
                   <th data-field="consentdate" data-sortable="false" data-card-visible="false" data-searchable="false" data-class="consentdate-field text-center">{{_("Consent Date (GMT)")}}</th>
                   <th data-field="organization" data-sortable="true" data-class="organization-field">{{ _("Site(s)") }}</th>
               </tr>
