--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -394,10 +394,12 @@
             {% if consent_agreements %}tnthAjax.getConsent({{ person.id if person }}, true);{% endif %}
             tnthAjax.getOrgs({{ person.id if person }}, false, false, _handleOrgs);
         });
-        
+
         function _handleOrgs() {
+
             if (leafOrgs) OT.filterOrgs(leafOrgs);
             if (!orgsEditable) disableOrgs();
+
             {% if (person.has_role('patient') or current_user.has_role('patient')) and 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES %}
                 var userOrgs = $("#userOrgs input[name='organization']").not('[parent_org]');
                 var checkedOrgs = {};
@@ -411,7 +413,7 @@
                     };
                 });
             {% endif %}
-            {% if current_user.has_role('patient') and not('patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES) %}
+            {% if (current_user.has_role('patient') or current_user.has_role('write_only')) and not('patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES) %}
                 var userOrgs = $("#userOrgs input[name='organization']").not('[parent_org]');
                 var checkedOrgs = [];
                 userOrgs.each(function() {
@@ -425,7 +427,7 @@
                 if (checkedOrgs.length > 0) {
                     var html = "";
                     checkedOrgs.forEach(function(item) {
-                        html += '<div id="' + item.id + '_container" class="indent org-container"><label id="org-label-' + item.id + '" class="org-label"><input class="clinic" type="checkbox" name="organization" id="' + item.id + '_org" value="' + item.id + '" disabled="disabled" checked>' + item.name + "</label></div>";
+                        html += '<div id="' + item.id + '_container" class="org-container"><label id="org-label-' + item.id + '" class="org-label"><input class="clinic" type="checkbox" name="organization" id="' + item.id + '_org" value="' + item.id + '" disabled="disabled" checked>' + item.name + "</label></div>";
                     });
                     $("#fillOrgs").html(html);
                     $("div.noOrg-container").hide();
@@ -781,7 +783,7 @@
         <input type="hidden" id="_session_user_id" value="{{person.id if person}}"/>
         <table id="userSessionListTable" class="tnth-admin-table table table-hover table-condensed table-striped table-bordered table-responsive small-text">
             <caption>{{ _("Session History") }} <span class="text-muted smaller-text">({{ _("click each row to review report") }})</span></caption>
-            <tr><th>{{ _("Assessment Name") }}</th><th>{{ _("Status") }}</th><th>{{ _("Last Updated") }} <small id="gmtText" class="gmt">( {{ _("GMT Time Zone") }} )</small></th></tr>
+            <tr><th>{{ _("Questionnaire Name") }}</th><th>{{ _("Status") }}</th><th>{{ _("Last Updated") }} <small id="gmtText" class="gmt">( {{ _("GMT Time Zone") }} )</small></th></tr>
         </table>
         <div id="profileSessionListError" style="color: #a94442"></div>
     </div>
@@ -831,7 +833,7 @@
 
                 } else {
                     $("#userSessionListTable").hide();
-                    $("#userSessionsListContainer").append("<span class='text-muted'>No Assessment Data Found.</span>");
+                    $("#userSessionsListContainer").append("<span class='text-muted'>No Questionnaire Data Found.</span>");
                 };
 
             }).fail(function() {
@@ -1389,7 +1391,7 @@
         <div class="row" id="profileSessionListMainContainer">
             <div class="col-md-12 col-xs-12">
                 <div  class="profile-item-container">
-                     <h4 id="proAssessmentsLoc" class="profile-item-title">{{ _("PRO Assessments") }}</h4>
+                     <h4 id="proAssessmentsLoc" class="profile-item-title">{{ _("PRO Questionnaires") }}</h4>
                     {{profileSessionList(person, current_user)}}
                 </div>
             </div>
@@ -1405,6 +1407,7 @@
     {% endif %}
 
     {% if person and person.has_role('patient') %}
+        <!--  hide the procedure section for now as more rules will be applied to this section
         <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container">
@@ -1415,6 +1418,7 @@
                 </div>
             </div>
         </div>
+        -->
     {% endif %}
 
     {% if person and person.has_role('patient') %}
@@ -1429,7 +1433,6 @@
             </div>
         </div>
     </div>
-
     {%if person and person.has_role('patient')%}
         <div class="row">
             <div class="col-md-12 col-xs-12">
