--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -2,11 +2,6 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn, back_link %}
 {% from "profile_macros.html" import profile, profileSaveBtn, profileImage %}
-
-<!-- <div id="loadingIndicator" class="loading-indicator">
-    <i class="fa fa-circle-o-notch fa-spin fa-4x"></i>
-</div> -->
-
 <br/>
 <div class="flex">
 <div class="profile-header">
@@ -69,7 +64,7 @@
 <div id="indexContainer">{{ _("Index List") }}</div>
 <br/>
 <form id="profileForm" class="form tnth-form to-validate" role="form" data-toggle="validator">
-  <div class="row" style="position: relative;">
+  <div class="row">
       <div class="col-md-12">
           {{profile(user, current_user, consent_agreements)}}
           <br/>
@@ -85,27 +80,7 @@
 
 {% block document_ready %}
 
-
-function goTo(event, id) {
-    event.stopPropagation();
-    window.location = "#" + id;
-    $("#indexContainer").removeClass("open");
-};
-
-{% if user.has_role('patient')  and (user.id != current_user.id) %}
-
-  var patientId = {{user.id}};
-
-{% endif %}
-
-var pcaLocalizedStatus;
-
-{% if pca_localized_status is not none %}
-
-pcaLocalizedStatus = {% if pca_localized_status %}true{%else%}false{%endif%};
-
-{% endif %}
-
+{% if user.has_role('patient')  and (user.id != current_user.id) %}var patientId = {{user.id}};{% endif %}
 
 function handleLoginAs() {
     //sessionStorage does not work allow addition of item in private mode
@@ -115,6 +90,12 @@ function handleLoginAs() {
 
     }
     location.replace('/login-as/{{user.id}}');
+};
+
+function goTo(event, id) {
+    event.stopPropagation();
+    window.location = "#" + id;
+    $("#indexContainer").removeClass("open");
 };
 
 $(document).ready(function(){
@@ -199,7 +180,6 @@ $(document).ready(function(){
         };
     });
 
-
     if (!(_isTouchDevice())) $('#indexNavBar span[data-toggle="tooltip"]').tooltip();
 
     $("html").click(function(event){
@@ -224,55 +204,5 @@ $(document).ready(function(){
     $("#email").attr("update-on-validated", "true").attr("user-id", '{{user.id}}');
 
 });
-
-/** Remove patientQuestion functionality for now
-var getQs = [ "biopsy", "pca_diag"];
-$.each(getQs, function(i,val){
-    $.ajax ({
-        type: "GET",
-        url: '/api/patient/{{ user.id }}/clinical/'+val
-    }).done(function(data) {
-        var $radios = $('input:radio[name='+val+']');
-        if($radios.is(':checked') === false) {
-            $radios.filter('[value='+data.value+']').prop('checked', true);
-        }
-    }).fail(function() {
-        console.log("Problem retrieving data from server.")
-    });
-});
-
-$("#patientQuestions input").on("change", function(){
-    var toCall = $(this).attr("name");
-    var theVal = $(this).val();
-    $.ajax ({
-        type: "POST",
-        url: '/api/patient/{{ user.id }}/clinical/'+toCall,
-        contentType: "application/json; charset=utf-8",
-        dataType: 'json',
-        data: JSON.stringify({value: theVal})
-    }).done(function() {
-        // Allow user to save with button, even though these answers have already been submitted
-        $('#updateProfile').removeClass("disabled")
-    }).fail(function() {
-        alert("There was a problem saving your answers. Please try again.");
-    });
-});
-**/
-
-/** Get and Put roles **/
-function setRoles() {
-    tnthAjax.getRoles({{ user.id }}, true);
-    $("#rolesGroup input:checkbox").on("click",function(){
-
-        var roles = $("#rolesGroup input:checkbox:checked").map(function(){
-            return { name: $(this).val() };
-        }).get();
-        var toSend = {"roles": roles};
-        tnthAjax.putRoles({{user.id}},toSend);
-
-    });
-};
-/* done in on change event for role now*/
-//setRoles();
 
 {% endblock %}
