--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1008,29 +1008,17 @@
                       var toSend = thisItem.val();
                       tnthAjax.putClinical({{person.id}},toCall,toSend, $(this));
 
-                      if (toSend == "true" || toCall ==  "pca_localized") {
+                      if (toSend == "true") {
                         thisItem.parents(".pat-q").nextAll().fadeIn();
                       } else {
                         if (toCall == "biopsy") {
-                            ["pca_diag", "pca_localized"].forEach(function(fieldName) {
+                            ["pca_diag"].forEach(function(fieldName) {
                                 $("input[name='" + fieldName + "']").each(function() {
                                     $(this).prop("checked", false);
                                 });
                             });
                             if ($("input[name='pca_diag']").length > 0) {
                                 tnthAjax.putClinical({{person.id}},"pca_diag","false", $(this));
-                            };
-                            if ($("input[name='pca_localized']").length > 0) {
-                                tnthAjax.putClinical({{person.id}},"pca_localized","false", $(this));
-                            };
-                        } else if (toCall == "pca_diag") {
-                            ["pca_localized"].forEach(function(fieldName) {
-                              $("input[name='" + fieldName + "']").each(function() {
-                                  $(this).prop("checked", false);
-                              });
-                            });
-                            if ($("input[name='pca_localized']").length > 0) {
-                                tnthAjax.putClinical({{person.id}},"pca_localized","false", $(this));
                             };
                         }
                         thisItem.parents(".pat-q").nextAll().fadeOut();
@@ -1045,10 +1033,6 @@
             {
                 "fields": $("#patientQ input[name='pca_diag']"),
                 "containerId": "patDiag"
-            },
-            {
-                "fields": $("#patientQ input[name='pca_localized']"),
-                "containerId": "patMeta"
             }
             ].forEach( function(item) {
                 item.fields.each(function() {
@@ -1271,48 +1255,13 @@
                 <div class="profile-item-container custom-container-item">
                     <h4 class="profile-item-title">{{_("Enter manually")}}</h4>
                     <div class="custom-container-content text-muted">{{_("Enter questionnaire responses on patient's behalf. Helpful if responses have been completed on paper.")}}</div><br/>
-                    <a class="btn btn-tnth-primary" id="assessmentLink" href="location.replace('/api/present-assessment?instrument_id=eortc&instrument_id=prems&subject_id={{person.id}}');">{{_("Enter manually")}}</a>
+                    <a class="btn btn-tnth-primary" id="assessmentLink" href="/api/present-assessment?instrument_id=eortc&instrument_id=prems&subject_id={{person.id}}">{{_("Enter manually")}}</a>
 
                 </div>
             </div>
         </div>
     </div>
     <script>
-    function adjustAssessmentInstrument(status) {
-          var instrumentId = "";
-          var CRV_INSTRUMENT = "epic26", IRONMAN_INSTRUMENT="eortc&instrument_id=prems";
-          if (hasValue(status)) {
-              if (status) instrumentId = CRV_INSTRUMENT;
-              else instrumentId = IRONMAN_INSTRUMENT;
-          } else {
-            $.ajax ({
-                type: "GET",
-                async: false,
-                url: "/api/patient/{{ person.id }}/clinical/pca_localized"
-            }).done(function(data) {
-              if (data) {
-                var va = data.value ? String(data.value).toLowerCase(): "";
-                //console.log(data)
-                if (hasValue(va)) {
-                   switch(String(va).toLowerCase()) {
-                    case "true":
-                      instrumentId = CRV_INSTRUMENT;
-                      break;
-                    case "false":
-                      instrumentId = IRONMAN_INSTRUMENT;
-                      break;
-                   };
-                };
-              };
-            }).fail(function() {
-                //console.log("Problem retrieving data from server.")
-            });
-        };
-        if (hasValue(instrumentId)) {
-        $("#assessmentLink").attr("href", "/api/present-assessment?instrument_id="+instrumentId+"&subject_id={{person.id}}");
-        };
-    };
-
     $(document).ready(function() {
         $("#profileSendEmailContainer").hide();
         $("#sendEmailLabel").hide();
@@ -1325,8 +1274,6 @@
             if (hasValue($(this).val())) $("#profileEmailSelect").attr("disabled", false);
             else $("#profileEmailSelect").attr("disabled", true);
         });
-        //initialize pca localized modal, NOTE, will not need to make extra ajax call if pca_localized_status is set initially
-        adjustAssessmentInstrument(pcaLocalizedStatus);
     });</script>
 {%- endmacro %}
 {% macro profile(person, current_user, consent_agreements) -%}
@@ -1400,10 +1347,6 @@
 
     {% if (person.id == current_user.id and person.has_role("patient")) or (person.id != current_user.id and current_user.has_role('provider'))%}
         {{profileClinicalQuestions(person, current_user) | show_macro('clinical_questions')}}
-    {% endif %}
-
-    {% if (person.has_role("patient")) and (person.id != current_user.id and current_user.has_role('provider'))%}
-        {{profileClinicalPCALocalized(person, current_user) | show_macro('pca_localized')}}
     {% endif %}
 
     {% if person and person.has_role('patient') %}
