fix orgs UI label for when editable by patient

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -371,7 +371,8 @@
 <!--this has an ajax call to fill in the content-->
 {% macro profileOrg(person, removeNone, consent_agreements, current_user) -%}
     <div class="form-group profile-section" id="userOrgs">
-        <label>{{_("Clinics ")}}<span class="text-muted smaller-text">({{ _("Optional") }})</span></label>
+        {% if 'patient' in config.CONSENT_EDIT_PERMISSIBLE_ROLES %}<label>Main clinic for prostate cancer care</label>{%else%}
+        <label>{{_("Clinics ")}}<span class="text-muted smaller-text">({{ _("Optional") }})</span></label>{% endif %}
         <div class="indent">
         <div id="fillOrgs"></div>
         <div class="noOrg-container" style="{{'display:none' if removeNone == 'true'}}"><label><input id="noOrgs" class="clinic" type="checkbox" name="organization" value="0"><span>{{ _("None of the Above") }}</span></label></div>
