--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -134,22 +134,24 @@
             </div>
           </div>
         </div>
-        <div id="patMeta" data-topic="pca_localized" class="tnth-hide pat-q">
-           <br />
-           <p>{{ _("Is the prostate cancer only within the prostate?") }}</p>
-           <div class="form-group">
-             <div class="radio">
-               <label>
-                 <input type="radio" class="init-queries-field" name="pca_localized" id="pca_localized_yes" value="true"> {{ _("Yes") }}
-               </label>
+        {% if not config.LOCALIZED_AFFILIATE_ORG %}
+          <div id="patMeta" data-topic="pca_localized" class="tnth-hide pat-q">
+             <br />
+             <p>{{ _("Is the prostate cancer only within the prostate?") }}</p>
+             <div class="form-group">
+               <div class="radio">
+                 <label>
+                   <input type="radio" class="init-queries-field" name="pca_localized" id="pca_localized_yes" value="true"> {{ _("Yes") }}
+                 </label>
+               </div>
+               <div class="radio">
+                 <label>
+                   <input type="radio" class="init-queries-field" name="pca_localized" id="pca_localized_no" value="false"> {{ _("No (the cancer is in other parts of my body, too)") }}
+                 </label>
+               </div>
              </div>
-             <div class="radio">
-               <label>
-                 <input type="radio" class="init-queries-field" name="pca_localized" id="pca_localized_no" value="false"> {{ _("No (the cancer is in other parts of my body, too)") }}
-               </label>
-             </div>
-           </div>
-        </div>
+          </div>
+        {% endif %}
         <div id="patTx" data-topic="tx" class="tnth-hide pat-q">
           <br />
           <p>{{ _("Have you begun prostate cancer treatment?") }}</p>
