--- a/portal/templates/gil/base.html
+++ b/portal/templates/gil/base.html
@@ -70,7 +70,7 @@
         <h3 class="side-nav__heading">Navigation</h3>
         <ul class="side-nav-items">
           <li class="side-nav-items__item side-nav-items__item--home"><a href="{{PORTAL}}/">Home</a></li>
-          {% if user and user.has_role('provider') %}
+          {% if user and user.has_role(ROLE.STAFF) %}
               <li class="side-nav-items__item"><a href="{{PORTAL}}/patients">Patients</a></li>
           {% endif %}
           {% if user %}
@@ -370,7 +370,7 @@
                           "-khtml-opacity": 1,
                           "opacity": 1
                         });
-            {% if user and (not user.has_role("provider")) and (not user.has_role("admin")) %} filterMenu(); {% else %} $("#loadingIndicator").hide(); {% endif %}
+            {% if user and (not user.has_role(ROLE.STAFF)) and (not user.has_role(ROLE.ADMIN)) %} filterMenu(); {% else %} $("#loadingIndicator").hide(); {% endif %}
           };
 
           function filterMenu() {
