portal.html layout fixes

--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -1512,9 +1512,7 @@ div.org-container input[type="checkbox"] {
   }
 }
 @media (min-width: 768px) {
-  #mainNav {
-    height: 135px;
-  }
+  
   #fullSizeBox {
     /*background-image: none;
     min-height: auto;*/
@@ -1592,6 +1590,11 @@ div.org-container input[type="checkbox"] {
   .custom-container #profileEmailSelect {
     width: 90%;
     max-width: 100%;
+  }
+}
+@media (min-width: 991px) {
+  #mainNav {
+    height: 135px;
   }
 }
 @media (min-width: 992px) {
