--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1643,9 +1643,6 @@ div.org-container input[type="checkbox"] {
 }
 
 @media (min-width: 768px) {
-  #mainNav {
-    height: 135px;
-  }
   #fullSizeBox {
     /*background-image: none;
     min-height: auto;*/
@@ -1681,6 +1678,11 @@ div.org-container input[type="checkbox"] {
   }
   .tnth-splash-bottom-link {
     font-size: 24px;
+  }
+}
+@media (min-width: 991px) {
+  #mainNav {
+    height: 135px;
   }
 }
 @media (max-width: 991px) {
