--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -1461,9 +1461,6 @@ div.org-container input[type="checkbox"] {
   }
 }
 @media (min-width: 768px) {
-  #mainNav {
-    height: 135px;
-  }
   #fullSizeBox {
     /*background-image: none;
     min-height: auto;*/
@@ -1497,6 +1494,11 @@ div.org-container input[type="checkbox"] {
   }
   .tnth-splash-bottom-link {
     font-size: 24px;
+  }
+}
+@media (min-width: 991px) {
+  #mainNav {
+    height: 135px;
   }
 }
 @media (max-width: 991px) {
