--- a/portal/templates/portal.html
+++ b/portal/templates/portal.html
@@ -23,8 +23,8 @@
     {% set display = intervention.display_for_user(user) %}
     {% if display.access %}
         <div class="portal-item">
-            <h2 class="tnth-subhead">{{ intervention.description }}</h2>
-            <div style="padding:0.2em 0">
+            {% if intervention.description and intervention.description != "" %}<h2 class="tnth-subhead">{{ intervention.description }}</h2>{% endif %}
+            <div>
                 {{ display.card_html | safe }}
             </div>
             <div>
@@ -52,7 +52,10 @@
     <div class="portal-item">
         <h2 class="tnth-subhead">{{ _("Complete Registration") }}</h2>
         <p>{{ _("Completing your registration will allow you to return here in the future to see the information you've previously entered.") }}</p>
-        <a href="{{PORTAL}}{{ url_for('user.register', email=user.email if user.email)}}" class="btn-lg btn-tnth-primary">{{ _("Registration") }}</a>
+        <br/>
+        <div>
+            <a href="{{PORTAL}}{{ url_for('user.register', email=user.email if user.email)}}" class="btn-lg btn-tnth-primary">{{ _("Registration") }}</a>
+        </div>
     </div>
 {% endif %}
 
