--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -714,57 +714,12 @@
         <h4 class="text-muted">{% if person and person.username %}{{ _("for") + " " + person.username }} {% endif %}</h4>
         <p class="small-text text-muted">{{ _("Editable by admins only.") }}</p>
         <!-- roles are populated in main.js -->
-        <div class="form-group" id="rolesGroup" style="margin-left: 10px">
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="admin"> {{ _("Admin") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="anon"> {{ _("Anon") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="application_developer"> {{ _("Application Developer") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="content_manager"> {{ _("Content Manager") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="partner"> {{ _("Partner") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="patient"> {{ _("Patient") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="provider"> {{ _("Provider") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="test"> {{ _("Test") }}
-                </label>
-            </div>
-            <div class="checkbox">
-                <label>
-                    <input type="checkbox" name="user_type" value="write_only"> {{ _("Write Only") }}
-                </label>
-            </div>
-        </div>
+        <div class="form-group" id="rolesGroup" style="margin-left: 10px"></div>
     {% endif %}
     {% if person %}
     <script async>
     $(function () {
+        tnthAjax.getRoleList();
         tnthAjax.getRoles({{ person.id }}, true);
         $("#rolesGroup input[name='user_type']").each(function() {
             $(this).on("click", function() {
